--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>GermanSpaceAlliance by GermanModProject</title>
+    <title>GermanSpaceAlliance</title>
   </head>
 
   <body>
     <header>
-      <div class="inner">
-        <h1>GermanSpaceAlliance</h1>
+	<img src="images/GSA.png" alt="GSA" height="12%" width="12%" style="padding-left:20px; float:left; margin-top:-20px">
+      <div class="inner" style="padding-left: 20px;">
+        
+		<h1>GermanSpaceAlliance</h1>
         <h2>A Community Mod Project</h2>
         <a href="https://github.com/GermanModProject/Das-Mod-Projekt" class="button"><small>View project on</small> GitHub</a>
       </div>
@@ -28,18 +30,18 @@
 
     <div id="content-wrapper">
       <div class="inner clearfix">
-        <section id="main-content">
+        <section id="main-content" style="margin-left:-50px;">
           <h3>
 <a name="what-is-german-space-alliance" class="anchor" href="#what-is-german-space-alliance"><span class="octicon octicon-link"></span></a>What is German Space Alliance?</h3>
 
-<p>German Space Alliance is a common project from Modders of the <a href="http://www.kerbalspaceprogram.de/index.php?page=Index">German Kerbal Space Program Community</a>. Our aim was to join forces and to create a Mod for the Englisch Community as thanks that you also share your mods with us! Of course this mod wouldn`t exist without the German Community, but our thanks is for you dear Community!</p>
+<p>German Space Alliance is a common project from Modders of the <a href="http://www.kerbalspaceprogram.de/index.php?page=Index">German Kerbal Space Program Community</a>. Our aim was to join forces and to create a Mod for the English Community as thanks that you also share your mods with us! Of course this mod wouldn`t exist without the German Community, but our thanks is for you dear Community!</p>
 
 <h3>
 <a name="credits" class="anchor" href="#credits"><span class="octicon octicon-link"></span></a>Credits</h3>
 
 <ul>
 <li>Thomas P. Kerman</li>
-<li>Fr3akyHDx</li>
+<li>Fr3aKyHDx</li>
 <li>Jebediah Kerman</li>
 <li>runner78</li>
 <li>Quazar501</li>
