--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <body>
     <header>
-	<img src="images/GSA.png" alt="GSA" height="12%" width="12%" style="padding-left:20px; float:left; margin-top:-20px">
+	<img src="GSA.png" alt="GSA" height="12%" width="12%" style="padding-left:20px; float:left; margin-top:-20px">
       <div class="inner" style="padding-left: 20px;">
         
 		<h1>GermanSpaceAlliance</h1>
