--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
           <p class="repo-owner"><a href="https://github.com/GermanModProject/GSA">GermanSpaceAlliance</a> is maintained by <a href="http://www.kerbalspaceprogram.de/index.php?page=Index">KerbalSpaceProgram.de</a>.</p>
 
-          <p>This uses the Architect theme by <a href="https://twitter.com/jasonlong">Jason Long</a>.</p>
+          <p>This page uses the Architect theme by <a href="https://twitter.com/jasonlong">Jason Long</a>.</p>
           <p>Please report Bugs at our <br><a href="https://github.com/GermanModProject/GSA/issues">Bug Tracker</a> or via <a href="mailto:germanspacealliance@web.de">E-Mail</a>.
 		</aside>
       </div>
