--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <h3>
 <a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>License</h3>
 
-<p>&nbsp;&nbsp;<img src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" alt="CC BY-NC 3.0"><br>
+<p>&nbsp;<img src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" alt="CC BY-NC 3.0"><br>
 <a href="https://creativecommons.org/licenses/by-nc/3.0/">CC BY-NC 3.0</a></p>
         </section>
 
